<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".popupActivity.CompletedPopupActivity"
    android:id="@+id/root">




        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/frame_root"
            android:layout_gravity="center">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/primaryBright"
                android:id="@+id/cons1_root"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/user_name"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/margin_top"
                    android:id="@+id/user_name"
                    />

                <TextView
                    android:id="@+id/service_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="15dp"
                    android:text="@string/service_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_name"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/black"/>


                <TextView
                    android:id="@+id/service_type_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/service_type"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="15dp"
                    android:text="@string/service_type_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/service_type"
                    android:drawableLeft="@drawable/service_type" />

                <TextView
                    android:id="@+id/client_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/client_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/service_type_value"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/black"/>


                <TextView
                    android:id="@+id/client_location_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/map_address"
                    android:text="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/client_location"
                    android:textSize="@dimen/text_size"
                    />

                <TextView
                    android:id="@+id/notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/notes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/client_location_value"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/black"/>


                <TextView
                    android:id="@+id/notes_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/notes_txt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/notes"
                    android:textSize="@dimen/text_size"
                    />




                <RatingBar
                    android:id="@+id/rating_item"
                    style="@style/Base.Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/user_name"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_height="wrap_content"
                    android:rating="4"
                    />

                <ImageView
                    android:id="@+id/make_call"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/make_call"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/rating_item"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginRight="5dp" />






            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/signup_user_pic"
                android:layout_gravity="center_horizontal|fill_vertical"/>

        </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_root"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/houres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_right"
            android:layout_marginTop="8dp"
            android:text="@string/houres_server_provider"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/houres_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/provider_houres_value"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/give_bonus"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/houres"
            app:layout_constraintTop_toBottomOf="@id/houres"

            />

        <TextView
            android:id="@+id/bonus_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/give_bonus_value"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/houres_txt" />


        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/service_provider_cost"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/houres"
            app:layout_constraintTop_toBottomOf="@id/bonus"

            />

        <TextView
            android:id="@+id/cost_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/service_provider_cost_value"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bonus_txt" />

        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/discount"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/houres"
            app:layout_constraintTop_toBottomOf="@id/cost"

            />

        <TextView
            android:id="@+id/discount_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/discount_value"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cost_txt" />

        <TextView
            android:id="@+id/total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/total_cost"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/houres"
            app:layout_constraintTop_toBottomOf="@id/discount"

            />

        <TextView
            android:id="@+id/total_cost_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/total_cost_value"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/discount_txt" />


        <TextView
            android:id="@+id/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/min_max_charg"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_cost"

            />

    </android.support.constraint.ConstraintLayout>








</android.support.constraint.ConstraintLayout>